<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".expandable_example.ChooseExpandableActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_core"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_core"/>

    <Button
        android:id="@+id/button_sticky_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_support_sticky"/>

    <Button
        android:id="@+id/button_group_sticky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_group_sticky"/>

</LinearLayout>